<resources>
    <string name="app_name">Just Java</string>
    <string name="enter_name">Enter name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order_summary">ORDER_SUMMARY</string>
    <string name="order">ORDER</string>
</resources>
